--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <center>
-    <h1>개인 사이트 윈도우 사이트</h1>
-    <h2></h2>
+    <h1>송승훈 소개</h1>
+    <h2>온빛교육심리연구소 </h2>
 </center>
 
 </body>
