--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 도큐먼트</title>
-</head>
-<body>
-<center>
-    <h1>송승훈 소개</h1>
-    <h2>온빛교육심리연구소 </h2>
-</center>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Angela's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-</body>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="" alt="seunghun song picture"></td>
+        <td><h1>Seunghun Song</h1>
+        <p><em>Founder and CTO of <strong><a href="https://www.onbit.kr">On-bit Edu Center</a></strong>.</em></p>
+        <p>I am an researcher of Educational Technology. I ❤️ coffee and beer.</p></td>
+      </tr>
+    </table>
+    <hr>
+    <h3>Research</h3>
+    <ul>
+      <li>Educational Administration of Local Government</li>
+      <li>Jeonnam-Educational Longitudinal Survey 2018 (JELS 2018)</li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2010-2011</td>
+          <td>Admissions Officer of Chin-Ju National Educational Univ.</td>
+        </tr>
+        <tr>
+          <td>2012-2019</td>
+          <td>Researcher of Jeonnam-Educational Policy Research Center</td>
+        </tr>
+        <tr>
+          <td>2020-current</td>
+          <td>On-bit Educational Psychology Research Center</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+       <tr>
+        <td>Programming</td>
+        <td>⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 </html>
