--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
-  <body>
+  <body style="background-color: blue;">
     <table cellspacing="20">
       <tr>
         <td><img src="" alt="seunghun song picture"></td>
